Add native POC